# rust-admin-api

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yaml
migrations/2023-07-21-152440_create_users/: up.sql
src/: common.rs  main.rs  schema.rs
src/users/: get.rs  mod.rs  post.rs
